// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|Table Default 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-jzJRlG dYIEhZ"
  >
    <table
      className="sc-cSHVUG jnMLcu"
    >
      <tbody
        className="sc-chPdSV byfFmt"
      >
        <tr
          className="sc-kgoBCf DAmBN"
        >
          <td
            className="sc-kGXeez inPSkz"
          >
            US
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-kgoBCf DAmBN"
        >
          <td
            className="sc-kGXeez inPSkz"
          >
            PL
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            Warsaw
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-kgoBCf DAmBN"
        >
          <td
            className="sc-kGXeez inPSkz"
          >
            DE
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            Berlin
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-kgoBCf DAmBN"
        >
          <td
            className="sc-kGXeez inPSkz"
          >
            FR
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            Paris
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-kgoBCf DAmBN"
        >
          <td
            className="sc-kGXeez inPSkz"
          >
            ES
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            Madird
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-kgoBCf DAmBN"
        >
          <td
            className="sc-kGXeez inPSkz"
          >
            —
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Table with header 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-jzJRlG dYIEhZ"
  >
    <table
      className="sc-cSHVUG jnMLcu"
    >
      <thead
        className="sc-kAzzGY jHprQs"
      >
        <tr
          className="sc-kgoBCf DAmBN"
        >
          <th
            className="sc-kpOJdX fjigKX"
          >
            Code
          </th>
          <th
            className="sc-kpOJdX fjigKX"
          >
            Capital
          </th>
          <th
            className="sc-kpOJdX fjigKX"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-chPdSV byfFmt"
      >
        <tr
          className="sc-kgoBCf DAmBN"
        >
          <td
            className="sc-kGXeez inPSkz"
          >
            US
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-kgoBCf DAmBN"
        >
          <td
            className="sc-kGXeez inPSkz"
          >
            PL
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            Warsaw
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-kgoBCf DAmBN"
        >
          <td
            className="sc-kGXeez inPSkz"
          >
            DE
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            Berlin
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-kgoBCf DAmBN"
        >
          <td
            className="sc-kGXeez inPSkz"
          >
            FR
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            Paris
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-kgoBCf DAmBN"
        >
          <td
            className="sc-kGXeez inPSkz"
          >
            ES
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            Madird
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-kgoBCf DAmBN"
        >
          <td
            className="sc-kGXeez inPSkz"
          >
            —
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Table with numbered rows 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-jzJRlG dYIEhZ"
  >
    <table
      className="sc-cSHVUG jnMLcu"
    >
      <thead
        className="sc-kAzzGY jHprQs"
      >
        <tr
          className="sc-kgoBCf DAmBN"
        >
          <th
            className="sc-kpOJdX fjigKX"
          >
            #
          </th>
          <th
            className="sc-kpOJdX fjigKX"
          >
            Code
          </th>
          <th
            className="sc-kpOJdX fjigKX"
          >
            Capital
          </th>
          <th
            className="sc-kpOJdX fjigKX"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-chPdSV byfFmt"
      >
        <tr
          className="sc-kgoBCf DAmBN"
        >
          <td
            className="sc-dxgOiQ kGcGVZ"
          >
            1
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            US
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-kgoBCf DAmBN"
        >
          <td
            className="sc-dxgOiQ kGcGVZ"
          >
            2
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            PL
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            Warsaw
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-kgoBCf DAmBN"
        >
          <td
            className="sc-dxgOiQ kGcGVZ"
          >
            3
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            DE
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            Berlin
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-kgoBCf DAmBN"
        >
          <td
            className="sc-dxgOiQ kGcGVZ"
          >
            4
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            FR
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            Paris
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-kgoBCf DAmBN"
        >
          <td
            className="sc-dxgOiQ kGcGVZ"
          >
            5
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            ES
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            Madird
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-kgoBCf DAmBN"
        >
          <td
            className="sc-dxgOiQ kGcGVZ"
          >
            6
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            —
          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-kGXeez inPSkz"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
